<resources>
    <string name="app_name" translatable="false">Fudge</string>
    <string name="url" translatable="false">https://github.com/petabyt/fudge</string>
    <string name="motd_thing" translatable="false">Fudge open beta-testing release</string>
    <string name="connect_to_usb">Connect to USB</string>
    <string name="plugins">Plugins</string>
    <string name="help">Help</string>
    <string name="scripts">Scripts</string>
    <string name="connect_to_wifi">Connect to WiFi</string>
    <string name="downloading_image">Downloading image…</string>
    <string name="waiting_on_camera">Waiting on the camera…</string>
    <string name="good_connection">Initialized connection.</string>
    <string name="connection_failed">Failed to connect.</string>
    <string name="wait1">The camera is thinking…</string>
    <string name="camera_accept1">Your camera loves you.</string>
    <string name="camera_accept2">Your camera is happy.</string>
    <string name="setup_img_viewer">Setting up image viewer</string>
    <string name="started_remote_mode">Started remote mode.</string>
    <string name="connecting">Connecting…</string>
    <string name="dimensions">Image size</string>
    <string name="filesize">File size</string>
    <string name="alreadydownloaded">File is already downloaded.</string>
    <string name="regressiontesting">Developer Testing</string>
    <string name="gallery">Gallery</string>
    <string name="waiting_on_wifi">Waiting for WiFi</string>
    <string name="getImages2">Maybe you only have RAW files? Fuji doesn\'t let us view RAW over WiFi :(</string>
    <string name="noImages1">No images available on camera.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_liveview">Liveview</string>

    <string name="discovery1">Received the camera\'s intimate broadcast…</string>
    <string name="make_sure_press_ok">Make sure you pressed OK on the camera.</string>
    <string name="settings">Settings</string>
    <string name="discovery_failed">discovery failed...</string>
    <string name="stop_importing">Stop</string>
    <string name="camera_discovery_title">Camera Discovery</string>
    <string name="camera_discovery_help">In the background, Fudge is looking for a camera that is broadcasting itself to your local network. Use the \'connect to wifi\' button for normal pairing.</string>
    <string name="img_credits">Courtesy of thevibrantmachine</string>
    <string name="looking_for_a_camera">Looking for a camera...</string>
    <string name="bullet_pc_autosave">• PC AutoSave</string>
    <string name="bullet_wireless_tether_shooting">• Wireless Tether Shooting</string>
    <string name="learn_more">Learn more</string>
    <string name="send_feedback">Send feedback</string>
    <string name="open_wifi_settings">Open WiFi Settings</string>
    <string name="this_device_name">Device name</string>
    <string name="adv_developer_settings">Developer Settings</string>
    <string name="connect_to_this_device">Connect to this device\'s hotspot</string>
    <string name="ip_address">IP Address</string>
    <string name="wpa2_password">WPA2 Password</string>
    <string name="start_camera_discovery">Start camera discovery</string>
    <string name="cancel">Cancel</string>
    <string name="raws">RAWs</string>
    <string name="movs">MOVs</string>
    <string name="jpegs">JPEGs</string>
    <string name="will_download_whats_left">Will download any photos that you haven\'t already downloaded.</string>
    <string name="import_all_files">Import All</string>
    <string name="select_wifi_network">Select WiFi</string>
    <string name="try_to_connect_to_anything">Connect</string>
    <string name="hint_disconnect_from_main_network">Tip: Disconnect from your 2.4ghz internet WiFi network to get faster download speeds.</string>

</resources>
