<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/downloadingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_all_files"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/import_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/will_download_whats_left"
        android:textSize="15sp" />

    <Switch
        android:id="@+id/import_switch_jpegs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/jpegs" />

    <Switch
        android:id="@+id/import_switch_movs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movs" />

    <Switch
        android:id="@+id/import_switch_raws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/raws" />

    <ProgressBar
        android:id="@+id/import_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/import_start_stop_button"
        style="@style/GreyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>
