<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/wifi_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/go_button"
        android:drawableRight="@drawable/baseline_settings_24"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="Open WiFi Settings"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_msg" />

    <TextView
        android:id="@+id/error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/boxLayout"
        tools:layout_editor_absoluteX="46dp" />

    <LinearLayout
        android:id="@+id/boxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/connect_wifi"
            style="@style/GoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/baseline_wifi_tethering_24"
            android:padding="10dp"
            android:text="@string/connect_to_wifi" />

        <Button
            android:id="@+id/connect_autosave"
            style="@style/GoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/go_button2"
            android:drawableRight="@drawable/baseline_usb_24"
            android:padding="10dp"
            android:text="Connect to PC AUTOSAVE" />

        <Button
            android:id="@+id/connect_usb"
            style="@style/GoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/go_button2"
            android:drawableRight="@drawable/baseline_usb_24"
            android:padding="10dp"
            android:text="@string/connect_to_usb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/plugins"
                style="@style/GreyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableRight="@drawable/baseline_terminal_24"
                android:padding="10dp"
                android:text="@string/plugins"
                android:visibility="visible" />

            <Button
                android:id="@+id/help_button"
                style="@style/GreyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableRight="@drawable/baseline_help_24"
                android:padding="10dp"
                android:text="@string/help" />
        </LinearLayout>

        <Button
            style="@style/GoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_button"
            android:drawableRight="@drawable/baseline_bug_report_24"
            android:padding="10dp"
            android:text="Send feedback" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#1E1E1E"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:indeterminateBehavior="repeat" />

        <TextView
            android:id="@+id/bottomText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="Waiting for 'PC AUTO SAVE' cameras..." />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/grey_button"
            android:padding="10dp"
            android:src="@drawable/baseline_help_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
